--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <a href="#services" class="nav__link">Services</a>
           </li>
           <li class="nav__item">
-            <a href="#project" class="nav__link">Project</a>
+            <a href="#projects" class="nav__link">Project</a>
           </li>
           <li class="nav__item">
             <a href="#contact" class="nav__link">Contact</a>
@@ -64,23 +64,6 @@
                   in quality work.
                </p>
                <a href="#contact" class="button">Let's Talk</a>
-            </div>
-            <div class="home__social">
-               <a href="" target="_blank" class="home__social-link">
-                  <i class="fa-brands fa-facebook"></i>
-               </a>
-               <a href="" target="_blank" class="home__social-link">
-                  <i class="fa-brands fa-instagram"></i>
-               </a>
-               <a href="" target="_blank" class="home__social-link">
-                  <i class="fa-brands fa-twitter"></i>
-               </a>
-               <a href="" target="_blank" class="home__social-link">
-                  <i class="fa-brands fa-linkedin"></i>
-               </a>
-               <a href="" target="_blank" class="home__social-link">
-                  <i class="fa-brands fa-github"></i>
-               </a>
             </div>
          </div>
          <div class="home__image">
