--- a/index.html
+++ b/index.html
@@ -15,32 +15,32 @@
   <!-- HEADER -->
   <header class="header" id="header">
     <nav class="nav container">
-      <a href="#" class="nav__logo">
+      <a href="#" class="nav-logo">
         hunt<span>solo.</span>
       </a>
-      <div class="nav__menu" id="nav-menu">
-        <ul class="nav__list">
-          <li class="nav__item">
-            <a href="#home" class="nav__link">Home</a>
+      <div class="nav-menu" id="nav-menu">
+        <ul class="nav-list">
+          <li class="nav-item">
+            <a href="#home" class="nav-link">Home</a>
           </li>
-          <li class="nav__item">
-            <a href="#about" class="nav__link">About</a>
+          <li class="nav-item">
+            <a href="#about" class="nav-link">About</a>
           </li>
-          <li class="nav__item">
-            <a href="#services" class="nav__link">Services</a>
+          <li class="nav-item">
+            <a href="#services" class="nav-link">Services</a>
           </li>
-          <li class="nav__item">
-            <a href="#projects" class="nav__link">Project</a>
+          <li class="nav-item">
+            <a href="#projects" class="nav-link">Project</a>
           </li>
-          <li class="nav__item">
-            <a href="#contact" class="nav__link">Contact</a>
+          <li class="nav-item">
+            <a href="#contact" class="nav-link">Contact</a>
           </li>
         </ul>
-        <div class="nav__close" id="nav-close">
+        <div class="nav-close" id="nav-close">
           <i class="fas fa-times"></i>
         </div>
          </div>
-        <div class="nav__toggle" id="nav-toggle">
+        <div class="nav-toggle" id="nav-toggle">
           <i class="fas fa-bars"></i>
       </div>
     </nav>
@@ -50,24 +50,21 @@
   <main class="main">
     <!-- HOME -->
     <section class="home section" id="home">
-      <div class="home__container container grid">
+      <div class="home-container container grid">
          <div class="home_content">
-            <div class="home__data">
-               <h3 class="home__subtitle">
+            <div class="home-data">
+               <h3 class="home-subtitle">
                   Hello, <span>I'm</span>
                </h3>
-               <h1 class="home__title">Pacharo Simukonda</h1>
-               <h3 class="home__education">Front-end Developer</h3>
-               <p class="home__description">
-                  With knowledge in web development and 
-                  design, I offer the best projects resulting 
-                  in quality work.
+               <h1 class="home-title">Pacharo Simukonda</h1>
+               <p class="home-description">
+                  Hi, I'm Pacharo Simukonda, a Product Designer, Web Developer, UI/UX Designer, and Graphic Designer. I'm passionate about creating user-centered products that make people's lives easier. I'm also an upcoming Data Analyst and a Management Information Systems student at the Malawi University of Business and Applied Sciences.
                </p>
                <a href="#contact" class="button">Let's Talk</a>
             </div>
          </div>
-         <div class="home__image">
-            <img class="home__img" id="image" src="./assets/img/home4.jpg" alt="huntsolo." width="640" height="925">
+         <div class="home-image">
+            <img class="home-img" id="image" src="./assets/img/home4.jpg" alt="huntsolo." width="640" height="925">
          </div>       
       </div>
       
@@ -75,56 +72,61 @@
 
     <!-- ABOUT -->
     <section class="about section" id="about">
-      <div class="about__container container grid">
-         <div class="about__data">
-            <h3 class="section__subtitle">
+      <div class="about-container container grid">
+         <div class="about-data">
+            <h3 class="section-subtitle">
                My <span>Intro</span>
             </h3>
-            <h2 class="section__title">
+            <h2 class="section-title">
                About Me
             </h2>
-            <p class="about__description">
-               Frontend developer, I create web pages with 
-               UI / UX user interface, I have years of 
-               experience and many clients are happy with the 
-               projects carried out.
+            <p class="about-description">
+               I've been interested in design and technology since I was a child. I remember always being fascinated by the way that products could be used to solve problems and make people's lives easier. As I got older, I started to learn more about the design process and how to use technology to create user-centered products.
+<br><br>
+I'm currently a student at the Malawi University of Business and Applied Sciences, where I'm studying Management Information Systems. I'm also an upcoming Data Analyst, and I'm excited to learn more about how data can be used to improve the way that products are designed and developed.
+<br><br>
+In my free time, I enjoy spending time with my family and friends, playing soccer, and reading. I'm also a big fan of design blogs and podcasts, and I'm always looking for new ways to learn and grow as a designer.
+<br><br>
+I'm passionate about creating user-centered products that make people's lives easier. I believe that good design can make a real difference in the world, and I'm excited to use my skills to make a positive impact.
+<br><br>
+I'm always looking for new challenges and opportunities to learn and grow. If you have a project that you think I would be a good fit for, please don't hesitate to reach out. I'd love to hear from you!
             </p>
             <a href="#contact" class="button">Contact Me</a>
          </div>
-         <div class="about__image">
-            <img class="about__img" id="image" src="./assets/img/home3.jpg" alt="huntsolo." width="640" height="925">
+         <div class="about-image">
+            <img class="about-img" id="image" src="./assets/img/home3.jpg" alt="huntsolo." width="640" height="925">
          </div>
       </div>
     </section>
 
     <!-- SKILLS -->
     <section class="skills section">
-      <div class="skills__container container grid">
-         <div class="skills__data">
-            <h3 class="section__subtitle">
+      <div class="skills-container container grid">
+         <div class="skills-data">
+            <h3 class="section-subtitle">
                Favourite <span>Skills</span>
             </h3>
-            <h2 class="section__title">
+            <h2 class="section-title">
                My Skills
             </h2>
-            <p class="skills__description">
+            <p class="skills-description">
                See fully what skills I have and perform, 
                to develop the projects for you.
             </p>
             <a href="#projects" class="button">See Projects</a>
          </div>
-         <div class="skills__content">
-            <ol class="skills__group">
-               <li class="skills__item">HTML & CSS</li>
-               <li class="skills__item">Javascript</li>
-               <li class="skills__item">Bootstrap</li>
-               <li class="skills__item">PHP</li>
+         <div class="skills-content">
+            <ol class="skills-group">
+               <li class="skills-item">HTML & CSS</li>
+               <li class="skills-item">Javascript</li>
+               <li class="skills-item">Bootstrap</li>
+               <li class="skills-item">PHP</li>
             </ol>
-            <ol class="skills__group" start="5">
-               <li class="skills__item">Git & GitHub</li>
-               <li class="skills__item">Git & GitHub</li>
-               <li class="skills__item">Figma</li>
-               <li class="skills__item">Excel</li>
+            <ol class="skills-group" start="5">
+               <li class="skills-item">MySQL</li>
+               <li class="skills-item">Git & GitHub</li>
+               <li class="skills-item">Figma</li>
+               <li class="skills-item">Microsoft Office</li>
             </ol>
          </div>
       </div>
@@ -135,44 +137,44 @@
       <h3 class="section-subtitle">
          My <span>Services
       </h3>
-      <h2 class="section__title">
+      <h2 class="section-title">
          What I Do
       </h2>
-      <div class="services__container container grid">
-         <article class="services__card">
-            <div class="services__icon">
+      <div class="services-container container grid">
+         <article class="services-card">
+            <div class="services-icon">
                <i class="fa-solid fa-code"></i>
             </div>
-            <h2 class="services__title">
+            <h2 class="services-title">
                Web Developer
             </h2>
-            <p class="services__description">
+            <p class="services-description">
                Development of custom web pages. 
                Using current technologies and 
                libraries of the labor field.
             </p>
          </article>
-         <article class="services__card">
-            <div class="services__icon">
+         <article class="services-card">
+            <div class="services-icon">
                <i class="fa-solid fa-paintbrush"></i>
             </div>
-            <h2 class="services__title">
+            <h2 class="services-title">
                UI/UX Designer
             </h2>
-            <p class="services__description">
+            <p class="services-description">
                I offer design of web interfaces and 
                mobile applications, design made in 
                Figma and Adobe XD.
             </p>
          </article>
-         <article class="services__card">
-            <div class="services__icon">
+         <article class="services-card">
+            <div class="services-icon">
                <i class="fa-solid fa-pen"></i>
             </div>
-            <h2 class="services__title">
+            <h2 class="services-title">
                Graphic Designer
             </h2>
-            <p class="services__description">
+            <p class="services-description">
                I make designs at the client's request, 
                banner design, posters, digital 
                designs among others.
@@ -182,70 +184,70 @@
 
     <!-- PROJECTS -->
     <section class="projects section" id="projects">
-      <h3 class="section__subtitle">
+      <h3 class="section-subtitle">
          My <span>Jobs</span>
       </h3>
-      <h2 class="section__title">
+      <h2 class="section-title">
          Recent Projects
       </h2>
-      <div class="projects__container container grid">
-         <article class="projects__card">
-            <img src="assets/img/project-img-1.jpg" alt="Project Image" class="project__img">
-            <div class="projects__modal">
-               <span class="project__subititle">Web</span>
-               <h2 class="project__title">Modern Website</h2>
-               <a href="#" class="project__button">
-                  View Demo <i class="fa-solid fa-arrow-up-right-from-square"></i>
+      <div class="project-container container grid">
+         <article class="project-card">
+            <img src="assets/img/project-img-1.jpg" alt="Project Image" class="project-img">
+            <div class="project-modal">
+               <span class="project-subititle">Website</span>
+               <h2 class="project-title">Modern Website</h2>
+               <a href="#" class="button">
+                  View Project <i class="fa-solid fa-arrow-up-right-from-square"></i>
                </a>
             </div>
          </article>
-         <article class="projects__card">
-            <img src="assets/img/project-img-2.jpg" alt="Project Image" class="project__img">
-            <div class="projects__modal">
-               <span class="project__subititle">Web</span>
-               <h2 class="project__title">Modern Website</h2>
-               <a href="#" class="project__button">
-                  View Demo <i class="fa-solid fa-arrow-up-right-from-square"></i>
+         <article class="project-card">
+            <img src="assets/img/project-img-2.jpg" alt="Project Image" class="project-img">
+            <div class="project-modal">
+               <span class="project-subititle">UI/UX</span>
+               <h2 class="project-title">App Design</h2>
+               <a href="#" class="button">
+                  View Project <i class="fa-solid fa-arrow-up-right-from-square"></i>
                </a>
             </div>
          </article>
-         <article class="projects__card">
-            <img src="assets/img/project-img-3.jpg" alt="Project Image" class="project__img">
-            <div class="projects__modal">
-               <span class="project__subititle">Web</span>
-               <h2 class="project__title">Modern Website</h2>
-               <a href="#" class="project__button">
-                  View Demo <i class="fa-solid fa-arrow-up-right-from-square"></i>
+         <article class="project-card">
+            <img src="assets/img/project-img-3.jpg" alt="Project Image" class="project-img">
+            <div class="project-modal">
+               <span class="project-subititle">Graphic Design</span>
+               <h2 class="project-title">Branding Design</h2>
+               <a href="#" class="button">
+                  View Project <i class="fa-solid fa-arrow-up-right-from-square"></i>
                </a>
             </div>
          </article>
-         <article class="projects__card">
-            <img src="assets/img/project-img-4.jpg" alt="Project Image" class="project__img">
-            <div class="projects__modal">
-               <span class="project__subititle">Web</span>
-               <h2 class="project__title">Modern Website</h2>
-               <a href="#" class="project__button">
-                  View Demo <i class="fa-solid fa-arrow-up-right-from-square"></i>
+         <article class="project-card">
+            <img src="assets/img/project-img-4.jpg" alt="Project Image" class="project-img">
+            <div class="project-modal">
+               <span class="project-subititle">Data Analytics</span>
+               <h2 class="project-title">Dashboard</h2>
+               <a href="#" class="button">
+                  View Project <i class="fa-solid fa-arrow-up-right-from-square"></i>
                </a>
             </div>
          </article>
-         <article class="projects__card">
-            <img src="assets/img/project-img-5.jpg" alt="Project Image" class="project__img">
-            <div class="projects__modal">
-               <span class="project__subititle">Web</span>
-               <h2 class="project__title">Modern Website</h2>
-               <a href="#" class="project__button">
-                  View Demo <i class="fa-solid fa-arrow-up-right-from-square"></i>
+         <article class="project-card">
+            <img src="assets/img/project-img-5.jpg" alt="Project Image" class="project-img">
+            <div class="project-modal">
+               <span class="project-subititle">Web</span>
+               <h2 class="project-title">Hotel Website</h2>
+               <a href="#" class="button">
+                  View Project <i class="fa-solid fa-arrow-up-right-from-square"></i>
                </a>
             </div>
          </article>
-         <article class="projects__card">
-            <img src="assets/img/project-img-6.jpg" alt="Project Image" class="project__img">
-            <div class="projects__modal">
-               <span class="project__subititle">Web</span>
-               <h2 class="project__title">Modern Website</h2>
-               <a href="#" class="project__button">
-                  View Demo <i class="fa-solid fa-arrow-up-right-from-square"></i>
+         <article class="project-card">
+            <img src="assets/img/project-img-6.jpg" alt="Project Image" class="project-img">
+            <div class="project-modal">
+               <span class="project-subititle">UI/UX</span>
+               <h2 class="project-title">Website Design</h2>
+               <a href="#" class="button">
+                  View Project <i class="fa-solid fa-arrow-up-right-from-square"></i>
                </a>
             </div>
          </article>
@@ -254,21 +256,21 @@
 
     <!-- CONTACT -->
     <section class="contact section" id="contact">
-      <h3 class="section__subtitle">
+      <h3 class="section-subtitle">
         Get In <span>Touch</span>
       </h3>
-      <h2 class="section__title">
+      <h2 class="section-title">
         Contact Me
       </h2>
-      <div class="contact__container container grid">
-        <form action="" class="contact__form" id="contact-form">
-          <div class="contact__group">
-            <input type="text" name="user_name" required placeholder="Enter your name" class="contact__input">
-            <input type="email" name="user_email" required placeholder="Enter your email" class="contact__input">
+      <div class="contact-container container grid">
+        <form action="" class="contact-form" id="contact-form">
+          <div class="contact-group">
+            <input type="text" name="user_name" required placeholder="Enter your name" class="contact-input">
+            <input type="email" name="user_email" required placeholder="Enter your email" class="contact-input">
          </div>
-         <textarea name="user_project" required placeholder="Enter your message" class="contact__input"></textarea>
-            <p class="contact__message" id="contact-message"></p>
-            <button type="submit" class="button contact__button">
+         <textarea name="user_project" required placeholder="Enter your message" class="contact-input"></textarea>
+            <p class="contact-message" id="contact-message"></p>
+            <button type="submit" class="button contact-button">
                Send Message
             </button>
          </div>
@@ -279,27 +281,27 @@
 
   <!-- FOOTER -->
   <footer class="footer">
-    <div class="footer__container container grid">
-      <span class="footer__copy">
+    <div class="footer-container container grid">
+      <span class="footer-copy">
          Created by Pacharo Simukonda
        </span>
-    <div class="footer__social">
-      <a href="" target="_blank" class="footer__social-link">
+    <div class="footer-social">
+      <a href="https://web.facebook.com/profile.php?id=100007896288616" target="_blank" class="footer-social-link">
          <i class="fa-brands fa-facebook"></i> 
       </a>
-      <a href="" target="_blank" class="footer__social-link">
+      <a href="https://www.instagram.com/hunt.solo_/" target="_blank" class="footer-social-link">
          <i class="fa-brands fa-instagram"></i>
       </a>
-      <a href="" target="_blank" class="footer__social-link">
+      <a href="https://twitter.com/killhunteragain" target="_blank" class="footer-social-link">
          <i class="fa-brands fa-twitter"></i>
       </a>
-      <a href="" target="_blank" class="footer__social-link">
+      <a href="https://www.linkedin.com/in/pacharo-simukonda-367828183/" target="_blank" class="footer-social-link">
          <i class="fa-brands fa-linkedin"></i>
       </a>
-      <a href="" target="_blank" class="footer__social-link">
+      <a href="https://github.com/HNTR75" target="_blank" class="footer-social-link">
          <i class="fa-brands fa-github"></i>
       </a>
-      <a href="" target="_blank" class="footer__social-link">
+      <a href="https://www.behance.net/pacharosimukon" target="_blank" class="footer-social-link">
          <i class="fa-brands fa-behance"></i>
       </a>
     </div>
