--- a/index.html
+++ b/index.html
@@ -313,13 +313,7 @@ I'm always looking for new challenges and opportunities to learn and grow. If yo
    <i class="fa-solid fa-arrow-up"></i>
   </a>
 
-  <!-- SCROLLREVEAL -->
-  <script src="your-scrollreveal-script.js"></script>
-
-  <!-- EMAIL JS -->
-  
-
-  <!-- MAIN JS -->
+  <!-- Javascript file -->
   <script src="assets/js/main.js"></script>
 </body>
 </html>
